tests/ui/macros/cfg.stderr
error: macro requires a cfg-pattern as an argument
  --> $DIR/cfg.rs:2:5
   |
LL |     cfg!();
   |     ^^^^^^
   |     |
   |     cfg-pattern required
   |     in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `cfg!`

error: expected identifier, found `123`
  --> $DIR/cfg.rs:3:10
   |
LL |     cfg!(123);
   |          ^^^ expected identifier

error[E0565]: literal in `cfg` predicate value must be a string
  --> $DIR/cfg.rs:4:16
   |
LL |     cfg!(foo = 123);
   |                ^^^

error: expected 1 cfg-pattern
  --> $DIR/cfg.rs:5:5
   |
LL |     cfg!(foo, bar);
   |     ^^^^^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `cfg!`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0565`.
